test/types/void/nothing-variable-use-2.chpl
var v: nothing;
v = 1;
